# ViRAG

./: README.md  app.py  evaluate_rag_pipeline.py  example.env  main.py  pyproject.toml
data/db/: sell_data.sqlite
data/raw/: sell_data.xlsx
data/test/: test_data_sql.jsonl  test_data_wiki.jsonl
results/: detailed_metrics.txt  evaluation_results.json  metrics_summary.txt
src/: __init__.py
src/config/: settings.py
src/core/: embeddings.py  llm.py  vector_store.py
src/ingestion/: data_loader.py  indexer.py
src/pipeline/: __init__.py  enhanced_rag_pipeline.py  rag_pipeline.py
src/prompts/: __init__.py  query_rewrite.py  rag_response.py  router.py  sql.py
src/retrieval/: __init__.py  enhanced_rag_pipeline.py  query_rewriter.py  reranker.py  retriever.py
src/router/: query_router.py
src/search/: web_search.py
src/sql_agent/: __init__.py  plotting_agent.py  sql_agent.py  sql_tools.py
src/utils/: helpers.py  logging.py
test/: check_weaviate.py  test_weaviate_connect.py
