[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "fastapi>=0.115.12",
    "fastparquet>=2024.11.0",
    "gradio>=5.34.1",
    "ipython>=8.37.0",
    "kaleido==0.2.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.24",
    "langchain-tavily>=0.2.3",
    "langgraph>=0.4.8",
    "llama-index>=0.12.42",
    "llama-index-embeddings-huggingface>=0.5.4",
    "llama-index-vector-stores-weaviate>=1.3.1",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numpy>=2.2.6",
    "openai>=1.88.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pyarrow>=20.0.0",
    "pydantic-settings>=2.9.1",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "streamlit>=1.46.0",
    "weaviate>=0.1.2",
]
